# mlops

./: .pre-commit-config.yaml  README.md  commands.py  data.dvc  pyproject.toml
.dvc/: config
adtarasov-mlops/: .pre-commit-config.yaml
adtarasov_mlops/: classes.py  infer.py  train.py  utils.py
configs/: config.yaml
models/: rf.joblib.dvc
results/: .gitignore  metrics.json.dvc  predictions.csv.dvc
